--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
+    "title":"句東跨境",
+    "subTitle":"我是句東，分享跨境銀行卡、證券、保險、理財福利資訊。
+",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
